added getcomments routine
